--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+html, body, #app, #app>div {
+  height: 100%
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +38,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+iframe {
+  overflow: hidden;
+  width: 100%;
 }
